--- a/404.html
+++ b/404.html
@@ -176,7 +176,7 @@
                     </li>
                   </ul>
                   <div class="main-menu-two__btn-box d-md-none d-sm-block">
-                    <a href="index-ar.html" class="main-menu-two__btn thm-btn"
+                    <a href="404-ar.html" class="main-menu-two__btn thm-btn"
                       >Ar</a
                     >
                   </div>
@@ -201,7 +201,7 @@
                   </div>
                 </div>
                 <div class="main-menu-two__btn-box">
-                  <a href="index-ar.html" class="main-menu-two__btn thm-btn"
+                  <a href="404-ar.html" class="main-menu-two__btn thm-btn"
                     >Ar<span class="icon-right-arrow"></span
                   ></a>
                 </div>
@@ -253,13 +253,13 @@
                 <p class="error-page__text">
                   The page you are looking for was never existed.
                 </p>
-                <form class="error-page__form">
+                <!-- <form class="error-page__form">
                   <div class="error-page__form-input">
                     <input type="search" placeholder="Search here" />
                     <button type="submit"><i class="icon-search-1"></i></button>
                   </div>
-                </form>
-                <a href="index.html" class="thm-btn error-page__btn"
+                </form> -->
+                <a href="index.html" class="thm-btn error-page__btn m-auto mt-5"
                   >Back to home</a
                 >
               </div>
