--- a/about-ar.html
+++ b/about-ar.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ar">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>About || Index Consultation</title>
+    <title>من نحن || Index Consultation</title>
     <!-- favicons Icons -->
     <link
       rel="apple-touch-icon"
@@ -70,7 +70,7 @@
     <!-- template styles -->
     <link rel="stylesheet" href="assets/css/style.css" />
     <link rel="stylesheet" href="assets/css/style-responsive.css" />
-    <!-- <link rel="stylesheet" href="assets/css/style-ar.css" /> -->
+    <link rel="stylesheet" href="assets/css/style-ar.css" />
   </head>
 
   <body class="custom-cursor">
@@ -95,7 +95,7 @@
                   <i class="icon-location-1"></i>
                 </div>
                 <div class="text">
-                  <p>Villa 14,72 St. Maadi-Cairo</p>
+                  <p>فيلا 14،72 شارع المعادي - القاهرة</p>
                 </div>
               </li>
               <li>
@@ -142,7 +142,7 @@
             <div class="main-menu-two__wrapper-inner">
               <div class="main-menu-two__left">
                 <div class="main-menu-two__logo">
-                  <a href="index.html"
+                  <a href="index-ar.html"
                     ><img
                       src="assets/images/resources/logo-4.png"
                       alt=""
@@ -154,9 +154,9 @@
                     ><i class="fa fa-bars"></i
                   ></a>
                   <ul class="main-menu__list">
-                    <li><a href="index.html">Home </a></li>
+                    <li><a href="index-ar.html">الرئيسية</a></li>
                     <li>
-                      <a href="about.html">About</a>
+                      <a href="about-ar.html">من نحن</a>
                     </li>
                     <!-- <li class="dropdown">
                       <a href="#">Pages</a>
@@ -186,15 +186,15 @@
                         <li><a href="404.html">404 Error</a></li>
                       </ul>
                     </li> -->
-                    <li><a href="services.html">Services</a></li>
+                    <li><a href="services-ar.html">الخدمات</a></li>
                     <!-- <li><a href="news.html">News</a></li> -->
                     <li>
-                      <a href="contact.html">Contact</a>
+                      <a href="contact-ar.html">تواصل معنا</a>
                     </li>
                   </ul>
                   <div class="main-menu-two__btn-box d-md-none d-sm-block">
-                    <a href="about-ar.html" class="main-menu-two__btn thm-btn"
-                      >Ar</a
+                    <a href="about.html" class="main-menu-two__btn thm-btn"
+                      >En</a
                     >
                   </div>
                 </div>
@@ -211,15 +211,15 @@
                     <span class="icon-telephone-call"></span>
                   </div>
                   <div class="main-menu-two__call-content">
-                    <p class="main-menu-two__call-sub-title">Call Now</p>
+                    <p class="main-menu-two__call-sub-title">اتصل الآن</p>
                     <h5 class="main-menu-two__call-number">
                       <a href="tel:+201013714343">+20 101 3714 343</a>
                     </h5>
                   </div>
                 </div>
                 <div class="main-menu-two__btn-box">
-                  <a href="about-ar.html" class="main-menu-two__btn thm-btn"
-                    >Ar<span class="icon-right-arrow"></span
+                  <a href="about.html" class="main-menu-two__btn thm-btn"
+                    >En<span class="icon-right-arrow"></span
                   ></a>
                 </div>
               </div>
@@ -245,11 +245,11 @@
         <div class="container">
           <div class="page-header__inner">
             <ul class="thm-breadcrumb list-unstyled">
-              <li><a href="index.html">Home</a></li>
+              <li><a href="index-ar.html">الرئيسية</a></li>
               <li>-</li>
-              <li>About Us</li>
+              <li>من نحن</li>
             </ul>
-            <h2 class="page-header__title">About Us</h2>
+            <h2 class="page-header__title">من نحن</h2>
           </div>
         </div>
       </section>
@@ -266,15 +266,14 @@
               <div class="about-two__content">
                 <div class="section-title text-left">
                   <div class="section-title__tagline-box">
-                    <p class="section-title__tagline">About Us</p>
+                    <p class="section-title__tagline">معلومات عنا</p>
                   </div>
-                  <h2 class="section-title__title">Who Are We ?</h2>
+                  <h2 class="section-title__title">من نحن؟</h2>
                 </div>
                 <div class="about-two__content-title">
                   <h3>
-                    Index Consultation is a company specialized at providing
-                    Consultations at Human Resources field and we are sole at
-                    the following fields:
+                    تعتبر Index Consultation شركة متخصصة في تقديم الاستشارات في
+                    مجال الموارد البشرية، ونحن نتميز في المجالات التالية:
                   </h3>
                 </div>
                 <div class="about-two__content-inner">
@@ -286,7 +285,7 @@
                             <span class="icon-arrows"></span>
                           </div>
                           <div class="text">
-                            <p>Social Insurance</p>
+                            <p>التأمينات الاجتماعية</p>
                           </div>
                         </li>
                         <li>
@@ -294,7 +293,7 @@
                             <span class="icon-arrows"></span>
                           </div>
                           <div class="text">
-                            <p>Salaries Structuring</p>
+                            <p>هيكلة الرواتب</p>
                           </div>
                         </li>
                         <li>
@@ -302,7 +301,7 @@
                             <span class="icon-arrows"></span>
                           </div>
                           <div class="text">
-                            <p>Human Resources Consultations</p>
+                            <p>استشارات الموارد البشرية</p>
                           </div>
                         </li>
                         <li>
@@ -310,9 +309,7 @@
                             <span class="icon-arrows"></span>
                           </div>
                           <div class="text">
-                            <p>
-                              Egyptian Federation for Construction Contractors
-                            </p>
+                            <p>الاتحاد المصرى لمقاولى التشييد والبناء</p>
                           </div>
                         </li>
                       </ul>
@@ -324,7 +321,7 @@
                             <span class="icon-arrows"></span>
                           </div>
                           <div class="text">
-                            <p>Ministry of Manpower</p>
+                            <p>وزارة القوى العاملة ومكتب العمل</p>
                           </div>
                         </li>
                         <li>
@@ -332,7 +329,7 @@
                             <span class="icon-arrows"></span>
                           </div>
                           <div class="text">
-                            <p>Termination of Foreign Work Permits</p>
+                            <p>إنهاء تراخيص عمل الأجانب</p>
                           </div>
                         </li>
                         <li>
@@ -340,7 +337,7 @@
                             <span class="icon-arrows"></span>
                           </div>
                           <div class="text">
-                            <p>Health Insurance (Green Cards)</p>
+                            <p>التأمين الصحي (البطاقات الخضراء)</p>
                           </div>
                         </li>
                       </ul>
@@ -349,9 +346,9 @@
                 </div>
                 <div class="about-two__content-title mt-4">
                   <h3>
-                    We also provide comprehensive solutions to all problems that
-                    may face the company, executed by a team of consultants and
-                    staff covering all regions of the republic.
+                    كما نقوم بتقديم كافة الحلول لكل المشاكل التي من الممكن أن
+                    تواجه الشركة والتنفيذ بواسطة كوكبة من الاستشاريين وفريق عمل
+                    يغطي جميع أنحاء الجمهورية.
                   </h3>
                 </div>
               </div>
@@ -398,7 +395,7 @@
         <div class="container">
           <div class="section-title-two text-center">
             <div class="section-title-two__tagline-box">
-              <p class="section-title-two__tagline">company feature</p>
+              <p class="section-title-two__tagline">ميزات الشركة</p>
             </div>
             <h2 class="section-title-two__title">
               Developing leaders and high <br />
@@ -413,7 +410,7 @@
             >
               <div class="services-three__single">
                 <h3 class="services-three__title text-center">
-                  <a href="services-details.html">Who We Are</a>
+                  <a href="services-details.html">من نحن</a>
                 </h3>
                 <p class="services-three__text">
                   Massa augue angry inceptos ridiculus poten dictumst amet
@@ -431,7 +428,7 @@
             >
               <div class="services-three__single">
                 <h3 class="services-three__title text-center">
-                  <a href="services-details.html">Company Vision</a>
+                  <a href="services-details.html">رؤية الشركة</a>
                 </h3>
                 <p class="services-three__text">
                   Massa augue angry inceptos ridiculus poten dictumst amet
@@ -449,7 +446,7 @@
             >
               <div class="services-three__single">
                 <h3 class="services-three__title text-center">
-                  <a href="services-details.html">Why Choose Us</a>
+                  <a href="services-details.html">لماذا تختارنا</a>
                 </h3>
                 <p class="services-three__text">
                   Massa augue angry inceptos ridiculus poten dictumst amet
@@ -470,10 +467,10 @@
         <div class="container">
           <div class="section-title text-center">
             <div class="section-title__tagline-box">
-              <p class="section-title__tagline">Our client feedback</p>
+              <p class="section-title__tagline">أراء عملاؤنا</p>
             </div>
             <h2 class="section-title__title">
-              Happy client feedback about service
+              تعليقات العملاء السعداء حول خدماتنا
             </h2>
           </div>
 
@@ -981,10 +978,10 @@
       <section class="brand-one brand-two">
         <div class="container">
           <div class="section-title-two text-center">
-            <div class="section-title-two__tagline-box">
-              <p class="section-title-two__tagline">our satisfied company</p>
-            </div>
-            <h2 class="section-title-two__title">Some Of Our Clients</h2>
+              <div class="section-title-two__tagline-box">
+                  <p class="section-title-two__tagline">شركتنا الراضية</p>
+              </div>
+              <h2 class="section-title-two__title">بعض عملائنا</h2>
           </div>
           <div class="brand-one__inner">
             <div
@@ -1086,7 +1083,7 @@
                 >
                   <div class="footer-widget__column footer-widget__about">
                     <div class="footer-widget__logo">
-                      <a href="index.html"
+                      <a href="index-ar.html"
                         ><img
                           src="assets/images/resources/logo3.png"
                           alt=""
@@ -1099,7 +1096,7 @@
                       donec tren conubian
                     </p>
                     <div class="footer-widget__emergency-call">
-                      <p>Emergency</p>
+                      <p>اتصل الآن</p>
                       <p class="d-flex align-items-center gap-3">
                         <i class="fas fa-phone"></i
                         ><a href="tel:+201013714343">+20 101 3714 343</a>
@@ -1117,26 +1114,26 @@
                 >
                   <div class="footer-widget__column footer-widget__services">
                     <div class="footer-widget__title-box">
-                      <h3 class="footer-widget__title">Our Service</h3>
+                      <h3 class="footer-widget__title">خدماتنا</h3>
                     </div>
                     <ul class="footer-widget__services-list list-unstyled">
                       <li>
-                        <a href="about.html">Customer Experience</a>
+                        <a href="about-ar.html">التأمينات الإجتماعية</a>
                       </li>
                       <li>
-                        <a href="about.html">Business Strategy</a>
+                        <a href="about-ar.html">هيكلة الأجور التأمينية</a>
                       </li>
                       <li>
-                        <a href="about.html">Leadership Development</a>
+                        <a href="about-ar.html">إستشارات الموارد البشرية</a>
                       </li>
                       <li>
-                        <a href="about.html">Culture Change</a>
+                        <a href="about-ar.html">إنهاء تراخيص عمل الأجانب</a>
                       </li>
                       <li>
-                        <a href="about.html">Engineering & Optimization</a>
+                        <a href="about-ar.html">التأمين الصحي</a>
                       </li>
                       <li>
-                        <a href="about.html">Human Resource</a>
+                        <a href="about-ar.html">الخدمة المهنية</a>
                       </li>
                     </ul>
                   </div>
@@ -1147,20 +1144,20 @@
                 >
                   <div class="footer-widget__column footer-widget__contact">
                     <div class="footer-widget__title-box">
-                      <h3 class="footer-widget__title">Contact us</h3>
+                      <h3 class="footer-widget__title">تواصل معنا</h3>
                     </div>
                     <ul class="footer-widget__contact-list list-unstyled">
                       <li>
-                        <p class="footer-widget__contact-title">Phone</p>
+                        <p class="footer-widget__contact-title">الهاتف</p>
                         <p class="footer-widget__contact-location">
                           <a href="tel:+201013714343">+20 101 3714 343</a>
                         </p>
                       </li>
                       <li>
-                        <p class="footer-widget__contact-title">Location</p>
+                        <p class="footer-widget__contact-title">العنوان</p>
                         <p class="footer-widget__contact-location">
-                          Villa 14,72 St. <br />
-                          Maadi - Cairo
+                          فيلا 14,72 شارع <br />
+                          المعادي - القاهرة
                         </p>
                       </li>
                     </ul>
@@ -1175,8 +1172,8 @@
           <div class="container">
             <div class="site-footer__bottom-inner justify-content-center">
               <p class="site-footer__bottom-text">
-                Copyright © 2025 <a href="#">Index Consultation.</a> All Rights
-                Reserved.
+                حقوق النشر © 2025 <a href="#">Index Consultation.</a> جميع
+                الحقوق محفوظة.
               </p>
             </div>
           </div>
@@ -1195,7 +1192,7 @@
         ></span>
 
         <div class="logo-box">
-          <a href="index.html" aria-label="logo image"
+          <a href="index-ar.html" aria-label="logo image"
             ><img src="assets/images/resources/logo-3.png" width="150" alt=""
           /></a>
         </div>
@@ -1236,9 +1233,9 @@
       <!-- /.search-popup__overlay -->
       <div class="search-popup__content">
         <form action="#">
-          <label for="search" class="sr-only">search here</label
+          <label for="search" class="sr-only">ابحث هنا</label
           ><!-- /.sr-only -->
-          <input type="text" id="search" placeholder="Search Here..." />
+          <input type="text" id="search" placeholder="ابحث هنا..." />
           <button type="submit" aria-label="search submit" class="thm-btn">
             <i class="fas fa-search"></i>
           </button>
