--- a/contact-ar.html
+++ b/contact-ar.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ar">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Contact || Index Consultation</title>
+    <title>تواصل معنا || Index Consultation</title>
     <!-- favicons Icons -->
     <link
       rel="apple-touch-icon"
@@ -70,6 +70,7 @@
     <!-- template styles -->
     <link rel="stylesheet" href="assets/css/style.css" />
     <link rel="stylesheet" href="assets/css/style-responsive.css" />
+    <link rel="stylesheet" href="assets/css/style-ar.css" />
   </head>
 
   <body class="custom-cursor">
@@ -94,7 +95,7 @@
                   <i class="icon-location-1"></i>
                 </div>
                 <div class="text">
-                  <p>Villa 14,72 St. Maadi-Cairo</p>
+                  <p>فيلا 14،72 شارع المعادي - القاهرة</p>
                 </div>
               </li>
               <li>
@@ -125,7 +126,7 @@
             <div class="main-menu-two__wrapper-inner">
               <div class="main-menu-two__left">
                 <div class="main-menu-two__logo">
-                  <a href="index.html"
+                  <a href="index-ar.html"
                     ><img
                       src="assets/images/resources/logo-4.png"
                       alt=""
@@ -137,9 +138,9 @@
                     ><i class="fa fa-bars"></i
                   ></a>
                   <ul class="main-menu__list">
-                    <li><a href="index.html">Home </a></li>
+                    <li><a href="index-ar.html">الرئيسية</a></li>
                     <li>
-                      <a href="about.html">About</a>
+                      <a href="about-ar.html">من نحن</a>
                     </li>
                     <!-- <li class="dropdown">
                       <a href="#">Pages</a>
@@ -169,15 +170,15 @@
                         <li><a href="404.html">404 Error</a></li>
                       </ul>
                     </li> -->
-                    <li><a href="services.html">Services</a></li>
+                    <li><a href="services-ar.html">الخدمات</a></li>
                     <!-- <li><a href="news.html">News</a></li> -->
                     <li>
-                      <a href="contact.html">Contact</a>
+                      <a href="contact-ar.html">تواصل معنا</a>
                     </li>
                   </ul>
                   <div class="main-menu-two__btn-box d-md-none d-sm-block">
-                    <a href="contact-ar.html" class="main-menu-two__btn thm-btn"
-                      >Ar</a
+                    <a href="about.html" class="main-menu-two__btn thm-btn"
+                      >En</a
                     >
                   </div>
                 </div>
@@ -194,15 +195,15 @@
                     <span class="icon-telephone-call"></span>
                   </div>
                   <div class="main-menu-two__call-content">
-                    <p class="main-menu-two__call-sub-title">Call Now</p>
+                    <p class="main-menu-two__call-sub-title">اتصل الآن</p>
                     <h5 class="main-menu-two__call-number">
                       <a href="tel:+201013714343">+20 101 3714 343</a>
                     </h5>
                   </div>
                 </div>
                 <div class="main-menu-two__btn-box">
-                  <a href="contact-ar.html" class="main-menu-two__btn thm-btn"
-                    >Ar<span class="icon-right-arrow"></span
+                  <a href="contact.html" class="main-menu-two__btn thm-btn"
+                    >En<span class="icon-right-arrow"></span
                   ></a>
                 </div>
               </div>
@@ -228,11 +229,11 @@
         <div class="container">
           <div class="page-header__inner">
             <ul class="thm-breadcrumb list-unstyled">
-              <li><a href="index.html">Home</a></li>
+              <li><a href="index-ar.html">الرئيسية</a></li>
               <li>-</li>
-              <li>contact us</li>
+              <li>تواصل معنا</li>
             </ul>
-            <h2 class="page-header__title">contact us</h2>
+            <h2 class="page-header__title">تواصل معنا</h2>
           </div>
         </div>
       </section>
@@ -246,11 +247,11 @@
               <div class="contact-page__left">
                 <div class="section-title text-left">
                   <div class="section-title__tagline-box">
-                    <p class="section-title__tagline">contact information</p>
+                    <p class="section-title__tagline">معلومات التواصل</p>
                   </div>
                   <h2 class="section-title__title">
-                    Interested in consulting <br />
-                    service from us?
+                    تريد استشارة <br />
+                    اطلب خدماتنا ؟
                   </h2>
                 </div>
                 <p class="contact-page__text">
@@ -276,24 +277,24 @@
               <div class="contact-page__right">
                 <ul class="contact-page__contact-list list-unstyled">
                   <li>
-                    <span>Telephone</span>
+                    <span>التليفون</span>
                     <p><a href="tel:+201013714343">+20 101 3714 343</a></p>
                     <div class="icon">
                       <span class="icon-call-center"></span>
                     </div>
                   </li>
                   <li>
-                    <span>Location</span>
+                    <span>الموقع</span>
                     <p>
-                      Villa 14,72 St. <br />
-                      Maadi - Cairo
+                      فيلا 14,72 شارع <br />
+                      المعادي - القاهرة
                     </p>
                     <div class="icon">
                       <span class="icon-call-center-1"></span>
                     </div>
                   </li>
                   <li>
-                    <span>Email us</span>
+                    <span>البريد الالكتروني</span>
                     <p>
                       <a href="mailto:info@indexconsultation.com"
                         >info@indexconsultation.com</a
@@ -326,9 +327,9 @@
               <div class="contact-two__right">
                 <div class="section-title text-left">
                   <div class="section-title__tagline-box">
-                    <p class="section-title__tagline">get estimeate</p>
+                    <p class="section-title__tagline">احصل علي المساعدة</p>
                   </div>
-                  <h2 class="section-title__title">contact with us</h2>
+                  <h2 class="section-title__title">تواصل معنا</h2>
                 </div>
                 <p class="contact-two__text">
                   Him days likeness waters the you will after a fifth to every
@@ -346,7 +347,7 @@
                         <div class="contact-two__input-box">
                           <input
                             type="text"
-                            placeholder="Full Name*"
+                            placeholder="الاسم*"
                             name="name"
                           />
                         </div>
@@ -355,7 +356,7 @@
                         <div class="contact-two__input-box">
                           <input
                             type="email"
-                            placeholder="Email*"
+                            placeholder="البريد الالكتروني*"
                             name="email"
                           />
                         </div>
@@ -364,7 +365,7 @@
                         <div class="contact-two__input-box">
                           <input
                             type="text"
-                            placeholder="Phone*"
+                            placeholder="التليفون*"
                             name="Phone"
                           />
                         </div>
@@ -376,7 +377,7 @@
                               class="selectpicker"
                               aria-label="Default select example"
                             >
-                              <option selected>Subject*</option>
+                              <option selected>الخدمة*</option>
                               <option value="1">Sort by popular-01</option>
                               <option value="2">Sort by popular-02</option>
                               <option value="3">Sort by popular-03</option>
@@ -388,7 +389,7 @@
                         <div class="contact-two__input-box text-message-box">
                           <textarea
                             name="message"
-                            placeholder="Write your comment*"
+                            placeholder="اكتب استفسارك*"
                           ></textarea>
                         </div>
                         <div class="contact-two__btn-box">
@@ -396,7 +397,7 @@
                             type="submit"
                             class="thm-btn contact-two__btn rounded"
                           >
-                            send message<span class="icon-right-arrow"></span>
+                            ارسال<span class="icon-right-arrow"></span>
                           </button>
                         </div>
                       </div>
@@ -429,7 +430,7 @@
                 >
                   <div class="footer-widget__column footer-widget__about">
                     <div class="footer-widget__logo">
-                      <a href="index.html"
+                      <a href="index-ar.html"
                         ><img
                           src="assets/images/resources/logo3.png"
                           alt=""
@@ -442,7 +443,7 @@
                       donec tren conubian
                     </p>
                     <div class="footer-widget__emergency-call">
-                      <p>Emergency</p>
+                      <p>اتصل الآن</p>
                       <p class="d-flex align-items-center gap-3">
                         <i class="fas fa-phone"></i
                         ><a href="tel:+201013714343">+20 101 3714 343</a>
@@ -460,26 +461,26 @@
                 >
                   <div class="footer-widget__column footer-widget__services">
                     <div class="footer-widget__title-box">
-                      <h3 class="footer-widget__title">Our Service</h3>
+                      <h3 class="footer-widget__title">خدماتنا</h3>
                     </div>
                     <ul class="footer-widget__services-list list-unstyled">
                       <li>
-                        <a href="about.html">Customer Experience</a>
+                        <a href="about-ar.html">التأمينات الإجتماعية</a>
                       </li>
                       <li>
-                        <a href="about.html">Business Strategy</a>
+                        <a href="about-ar.html">هيكلة الأجور التأمينية</a>
                       </li>
                       <li>
-                        <a href="about.html">Leadership Development</a>
+                        <a href="about-ar.html">إستشارات الموارد البشرية</a>
                       </li>
                       <li>
-                        <a href="about.html">Culture Change</a>
+                        <a href="about-ar.html">إنهاء تراخيص عمل الأجانب</a>
                       </li>
                       <li>
-                        <a href="about.html">Engineering & Optimization</a>
+                        <a href="about-ar.html">التأمين الصحي</a>
                       </li>
                       <li>
-                        <a href="about.html">Human Resource</a>
+                        <a href="about-ar.html">الخدمة المهنية</a>
                       </li>
                     </ul>
                   </div>
@@ -490,20 +491,20 @@
                 >
                   <div class="footer-widget__column footer-widget__contact">
                     <div class="footer-widget__title-box">
-                      <h3 class="footer-widget__title">Contact us</h3>
+                      <h3 class="footer-widget__title">تواصل معنا</h3>
                     </div>
                     <ul class="footer-widget__contact-list list-unstyled">
                       <li>
-                        <p class="footer-widget__contact-title">Phone</p>
+                        <p class="footer-widget__contact-title">الهاتف</p>
                         <p class="footer-widget__contact-location">
                           <a href="tel:+201013714343">+20 101 3714 343</a>
                         </p>
                       </li>
                       <li>
-                        <p class="footer-widget__contact-title">Location</p>
+                        <p class="footer-widget__contact-title">العنوان</p>
                         <p class="footer-widget__contact-location">
-                          Villa 14,72 St. <br />
-                          Maadi - Cairo
+                          فيلا 14,72 شارع <br />
+                          المعادي - القاهرة
                         </p>
                       </li>
                     </ul>
@@ -518,8 +519,8 @@
           <div class="container">
             <div class="site-footer__bottom-inner justify-content-center">
               <p class="site-footer__bottom-text">
-                Copyright © 2025 <a href="#">Index Consultation.</a> All Rights
-                Reserved.
+                حقوق النشر © 2025 <a href="#">Index Consultation.</a> جميع
+                الحقوق محفوظة.
               </p>
             </div>
           </div>
@@ -538,7 +539,7 @@
         ></span>
 
         <div class="logo-box">
-          <a href="index.html" aria-label="logo image"
+          <a href="index-ar.html" aria-label="logo image"
             ><img src="assets/images/resources/logo-3.png" width="150" alt=""
           /></a>
         </div>
@@ -579,9 +580,9 @@
       <!-- /.search-popup__overlay -->
       <div class="search-popup__content">
         <form action="#">
-          <label for="search" class="sr-only">search here</label
+          <label for="search" class="sr-only">ابحث هنا</label
           ><!-- /.sr-only -->
-          <input type="text" id="search" placeholder="Search Here..." />
+          <input type="text" id="search" placeholder="ابحث هنا..." />
           <button type="submit" aria-label="search submit" class="thm-btn">
             <i class="fas fa-search"></i>
           </button>
