--- a/index-ar.html
+++ b/index-ar.html
@@ -118,18 +118,18 @@
                     <div class="main-menu-two__wrapper-inner">
                         <div class="main-menu-two__left">
                             <div class="main-menu-two__logo">
-                                <a href="index.html"><img src="assets/images/resources/logo-4.png" alt="" width="75"></a>
+                                <a href="index-ar.html"><img src="assets/images/resources/logo-4.png" alt="" width="75"></a>
                             </div>
                             <div class="main-menu-two__main-menu-box">
                                 <a href="#" class="mobile-nav__toggler"><i class="fa fa-bars"></i></a>
                                 <ul class="main-menu__list">
-                                    <li><a href="index.html">الرئيسية</a></li>
+                                    <li><a href="index-ar.html">الرئيسية</a></li>
                                     <li>
-                                        <a href="about.html">من نحن</a>
+                                        <a href="about-ar.html">من نحن</a>
                                     </li>
-                                    <li><a href="services.html">الخدمات</a></li>
+                                    <li><a href="services-ar.html">الخدمات</a></li>
                                     <li>
-                                        <a href="contact.html">اتصل بنا</a>
+                                        <a href="contact-ar.html">اتصل بنا</a>
                                     </li>
                                 </ul>
                                 <div class="main-menu-two__btn-box d-md-none d-sm-block">
@@ -182,7 +182,7 @@
                             <p class="main-slider-two__sub-title">نحن نهتم بأعمالك</p>
                             <h2 class="main-slider-two__title">أفضل تجربة <br> استشارة مجانية <br> لعملك القادم</h2>
                             <div class="main-slider-two__btn-box">
-                                <a href="about.html" class="main-slider-two__btn thm-btn">دعنا نعمل معًا<span
+                                <a href="about-ar.html" class="main-slider-two__btn thm-btn">دعنا نعمل معًا<span
                                     class="icon-right-arrow"></span></a>
                             </div>
                         </div>
@@ -210,7 +210,7 @@
                             <p class="main-slider-two__sub-title">نحن نهتم بأعمالك</p>
                             <h2 class="main-slider-two__title">أفضل تجربة <br> استشارة مجانية <br> لعملك القادم</h2>
                             <div class="main-slider-two__btn-box">
-                                <a href="about.html" class="main-slider-two__btn thm-btn">دعنا نعمل معًا<span
+                                <a href="about-ar.html" class="main-slider-two__btn thm-btn">دعنا نعمل معًا<span
                                     class="icon-right-arrow"></span></a>
                             </div>
                         </div>
@@ -238,7 +238,7 @@
                             <p class="main-slider-two__sub-title">نحن نهتم بأعمالك</p>
                             <h2 class="main-slider-two__title">أفضل تجربة <br> استشارة مجانية <br> لعملك القادم</h2>
                             <div class="main-slider-two__btn-box">
-                                <a href="about.html" class="main-slider-two__btn thm-btn">دعنا نعمل معًا<span
+                                <a href="about-ar.html" class="main-slider-two__btn thm-btn">دعنا نعمل معًا<span
                                     class="icon-right-arrow"></span></a>
                             </div>
                         </div>
@@ -430,7 +430,7 @@
                                 </li> -->
                             </ul>
                             <div class="about-two__content-btn">
-                                <a href="about.html" class="thm-btn">تعرف علينا<span
+                                <a href="about-ar.html" class="thm-btn">تعرف علينا<span
                                         class="icon-right-arrow"></span></a>
                             </div>
                         </div>
@@ -598,7 +598,7 @@
                     </div>
                 </div>
                 <div class="about-two__content-btn mt-5 text-center">
-                <a href="services.html" class="thm-btn">جميع الخدمات<span
+                <a href="services-ar.html" class="thm-btn">جميع الخدمات<span
                     class="icon-right-arrow"></span></a>
                 </div>
             </div>
@@ -692,7 +692,7 @@
                                 </div>
                             </div>
                             <div class="faq-one__btn-box">
-                                <a href="about.html" class="faq-one__btn thm-btn">استكشف المزيد<span
+                                <a href="about-ar.html" class="faq-one__btn thm-btn">استكشف المزيد<span
                                         class="icon-right-arrow"></span></a>
                             </div>
                         </div>
@@ -834,7 +834,7 @@
                                 </div>
                             </div>
                             <div class="about-two__content-btn">
-                                <a href="contact.html" class="thm-btn">اتصل بنا<span
+                                <a href="contact-ar.html" class="thm-btn">اتصل بنا<span
                                     class="icon-right-arrow"></span></a>
                             </div>
                         </div>
@@ -1057,7 +1057,7 @@
                   <span class="icon-wind-mill"></span>
                 </div>
                 <h3 class="how-it-work__title">
-                  <a href="about.html">فرق ذات خبرة</a>
+                  <a href="about-ar.html">فرق ذات خبرة</a>
                 </h3>
                 <p class="how-it-work__text">
                   تتمتع فرقنا بأكثر من 20 عامًا من الخبرة في مجالات الموارد البشرية والاستشارات لمساعدتك في تلبية احتياجاتك.
@@ -1072,7 +1072,7 @@
             >
               <div class="how-it-work__single-2">
                 <h3 class="how-it-work__title">
-                  <a href="about.html">السرية والأمان</a>
+                  <a href="about-ar.html">السرية والأمان</a>
                 </h3>
                 <p class="how-it-work__text">
                   نحن نفهم أهمية السرية والأمان، ونتخذ جميع الإجراءات اللازمة لضمان سلامة بياناتك ومعلوماتك.
@@ -1095,7 +1095,7 @@
                   <span class="icon-benefit"></span>
                 </div>
                 <h3 class="how-it-work__title">
-                  <a href="about.html">التحكم في التكاليف والوقت</a>
+                  <a href="about-ar.html">التحكم في التكاليف والوقت</a>
                 </h3>
                 <p class="how-it-work__text">
                   نحن نساعد عملك على التحكم في التكاليف وتوفير الوقت، ونمكن شركتك من الاستثمار في قدراتها الأساسية ونموها.
@@ -1110,7 +1110,7 @@
             >
               <div class="how-it-work__single-2">
                 <h3 class="how-it-work__title">
-                  <a href="about.html">حلول مخصصة</a>
+                  <a href="about-ar.html">حلول مخصصة</a>
                 </h3>
                 <p class="how-it-work__text">
                   نحن نقدم حلولًا مخصصة مصممة لتلبية الاحتياجات الفريدة لكل عميل بناءً على حجم الشركة والصناعة وعوامل أخرى.
@@ -1232,7 +1232,7 @@
                 >
                   <div class="footer-widget__column footer-widget__about">
                     <div class="footer-widget__logo">
-                      <a href="index.html"
+                      <a href="index-ar.html"
                         ><img
                           src="assets/images/resources/logo3.png"
                           alt=""
@@ -1261,22 +1261,22 @@
                     </div>
                     <ul class="footer-widget__services-list list-unstyled">
                       <li>
-                        <a href="about.html">التأمينات الإجتماعية</a>
+                        <a href="about-ar.html">التأمينات الإجتماعية</a>
                       </li>
                       <li>
-                        <a href="about.html">هيكلة الأجور التأمينية</a>
+                        <a href="about-ar.html">هيكلة الأجور التأمينية</a>
                       </li>
                       <li>
-                        <a href="about.html">إستشارات الموارد البشرية</a>
+                        <a href="about-ar.html">إستشارات الموارد البشرية</a>
                       </li>
                       <li>
-                        <a href="about.html">إنهاء تراخيص عمل الأجانب</a>
+                        <a href="about-ar.html">إنهاء تراخيص عمل الأجانب</a>
                       </li>
                       <li>
-                        <a href="about.html">التأمين الصحي</a>
+                        <a href="about-ar.html">التأمين الصحي</a>
                       </li>
                       <li>
-                        <a href="about.html">الخدمة المهنية</a>
+                        <a href="about-ar.html">الخدمة المهنية</a>
                       </li>
                     </ul>
                   </div>
@@ -1334,7 +1334,7 @@
             <span class="mobile-nav__close mobile-nav__toggler"><i class="fa fa-times"></i></span>
 
             <div class="logo-box">
-                <a href="index.html" aria-label="logo image"><img src="assets/images/resources/logo-4.png" width="75"
+                <a href="index-ar.html" aria-label="logo image"><img src="assets/images/resources/logo-4.png" width="75"
                         alt="" /></a>
             </div>
             <!-- /.logo-box -->
@@ -1372,8 +1372,8 @@
         <!-- /.search-popup__overlay -->
         <div class="search-popup__content">
             <form action="#">
-                <label for="search" class="sr-only">search here</label><!-- /.sr-only -->
-                <input type="text" id="search" placeholder="Search Here..." />
+                <label for="search" class="sr-only">ابحث هنا</label><!-- /.sr-only -->
+                <input type="text" id="search" placeholder="ابحث هنا..." />
                 <button type="submit" aria-label="search submit" class="thm-btn">
                     <i class="fas fa-search"></i>
                 </button>
