--- a/services.html
+++ b/services.html
@@ -177,7 +177,9 @@
                     </li>
                   </ul>
                   <div class="main-menu-two__btn-box d-md-none d-sm-block">
-                    <a href="index-ar.html" class="main-menu-two__btn thm-btn"
+                    <a
+                      href="services-ar.html"
+                      class="main-menu-two__btn thm-btn"
                       >Ar</a
                     >
                   </div>
@@ -202,7 +204,7 @@
                   </div>
                 </div>
                 <div class="main-menu-two__btn-box">
-                  <a href="index-ar.html" class="main-menu-two__btn thm-btn"
+                  <a href="services-ar.html" class="main-menu-two__btn thm-btn"
                     >Ar<span class="icon-right-arrow"></span
                   ></a>
                 </div>
