--- a/404-ar.html
+++ b/404-ar.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ar">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Contact || Index Consultation</title>
+    <title>خطأ 404 || Index Consultation</title>
     <!-- favicons Icons -->
     <link
       rel="apple-touch-icon"
@@ -70,6 +70,7 @@
     <!-- template styles -->
     <link rel="stylesheet" href="assets/css/style.css" />
     <link rel="stylesheet" href="assets/css/style-responsive.css" />
+    <link rel="stylesheet" href="assets/css/style-ar.css" />
   </head>
 
   <body class="custom-cursor">
@@ -94,7 +95,7 @@
                   <i class="icon-location-1"></i>
                 </div>
                 <div class="text">
-                  <p>Villa 14,72 St. Maadi-Cairo</p>
+                  <p>فيلا 14،72 شارع المعادي - القاهرة</p>
                 </div>
               </li>
               <li>
@@ -125,7 +126,7 @@
             <div class="main-menu-two__wrapper-inner">
               <div class="main-menu-two__left">
                 <div class="main-menu-two__logo">
-                  <a href="index.html"
+                  <a href="index-ar.html"
                     ><img
                       src="assets/images/resources/logo-4.png"
                       alt=""
@@ -137,9 +138,9 @@
                     ><i class="fa fa-bars"></i
                   ></a>
                   <ul class="main-menu__list">
-                    <li><a href="index.html">Home </a></li>
+                    <li><a href="index-ar.html">الرئيسية</a></li>
                     <li>
-                      <a href="about.html">About</a>
+                      <a href="about-ar.html">من نحن</a>
                     </li>
                     <!-- <li class="dropdown">
                       <a href="#">Pages</a>
@@ -169,15 +170,15 @@
                         <li><a href="404.html">404 Error</a></li>
                       </ul>
                     </li> -->
-                    <li><a href="services.html">Services</a></li>
+                    <li><a href="services-ar.html">الخدمات</a></li>
                     <!-- <li><a href="news.html">News</a></li> -->
                     <li>
-                      <a href="contact.html">Contact</a>
+                      <a href="contact-ar.html">تواصل معنا</a>
                     </li>
                   </ul>
                   <div class="main-menu-two__btn-box d-md-none d-sm-block">
-                    <a href="contact-ar.html" class="main-menu-two__btn thm-btn"
-                      >Ar</a
+                    <a href="404.html" class="main-menu-two__btn thm-btn"
+                      >En</a
                     >
                   </div>
                 </div>
@@ -201,8 +202,8 @@
                   </div>
                 </div>
                 <div class="main-menu-two__btn-box">
-                  <a href="contact-ar.html" class="main-menu-two__btn thm-btn"
-                    >Ar<span class="icon-right-arrow"></span
+                  <a href="404.html" class="main-menu-two__btn thm-btn"
+                    >En<span class="icon-right-arrow"></span
                   ></a>
                 </div>
               </div>
@@ -228,188 +229,46 @@
         <div class="container">
           <div class="page-header__inner">
             <ul class="thm-breadcrumb list-unstyled">
-              <li><a href="index.html">Home</a></li>
+              <li><a href="index-ar.html">الرئيسية</a></li>
               <li>-</li>
-              <li>contact us</li>
+              <li>خطأ 404</li>
             </ul>
-            <h2 class="page-header__title">contact us</h2>
+            <h2 class="page-header__title">خطأ 404</h2>
           </div>
         </div>
       </section>
       <!--Page Header End-->
 
-      <!--Contact Page Start-->
-      <section class="contact-page">
+      <!--Error Page Start-->
+      <section class="error-page">
         <div class="container">
           <div class="row">
-            <div class="col-xl-7 col-lg-7">
-              <div class="contact-page__left">
-                <div class="section-title text-left">
-                  <div class="section-title__tagline-box">
-                    <p class="section-title__tagline">contact information</p>
-                  </div>
-                  <h2 class="section-title__title">
-                    Interested in consulting <br />
-                    service from us?
-                  </h2>
+            <div class="col-xl-12">
+              <div class="error-page__inner">
+                <div class="error-page__title-box">
+                  <h2 class="error-page__title">404</h2>
                 </div>
-                <p class="contact-page__text">
-                  Rutrum sociosqu ametour nisida nibhes felise magna
-                  dignissim<br />
-                  placerat senectus non litora feugiat lacus pulvinar natoque
-                  nostra<br />
-                  torquent own was hath in grass
+                <h3 class="error-page__tagline">
+                  لا نستطيع العثور علي هذه الصفحة !
+                </h3>
+                <p class="error-page__text">
+                  الصفحة التي تبحث عنها غير موجودة.
                 </p>
-              </div>
-
-              <!--Google Map Start-->
-              <div class="google-map">
-                <iframe
-                  src="https://www.google.com/maps/embed?pb=!1m17!1m12!1m3!1d3456.436448744726!2d31.25408937555081!3d29.966884574962723!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m2!1m1!2zMjnCsDU4JzAwLjgiTiAzMcKwMTUnMjQuMCJF!5e0!3m2!1sen!2seg!4v1760612270495!5m2!1sen!2seg"
-                  class="google-map__one"
-                  allowfullscreen
-                ></iframe>
-              </div>
-              <!--Google Map End-->
-            </div>
-            <div class="col-xl-5 col-lg-5">
-              <div class="contact-page__right">
-                <ul class="contact-page__contact-list list-unstyled">
-                  <li>
-                    <span>Telephone</span>
-                    <p><a href="tel:+201013714343">+20 101 3714 343</a></p>
-                    <div class="icon">
-                      <span class="icon-call-center"></span>
-                    </div>
-                  </li>
-                  <li>
-                    <span>Location</span>
-                    <p>
-                      Villa 14,72 St. <br />
-                      Maadi - Cairo
-                    </p>
-                    <div class="icon">
-                      <span class="icon-call-center-1"></span>
-                    </div>
-                  </li>
-                  <li>
-                    <span>Email us</span>
-                    <p>
-                      <a href="mailto:info@indexconsultation.com"
-                        >info@indexconsultation.com</a
-                      >
-                    </p>
-                    <div class="icon">
-                      <span class="icon-envelope"></span>
-                    </div>
-                  </li>
-                </ul>
+                <!-- <form class="error-page__form">
+                  <div class="error-page__form-input">
+                    <input type="search" placeholder="Search here" />
+                    <button type="submit"><i class="icon-search-1"></i></button>
+                  </div>
+                </form> -->
+                <a href="index-ar.html" class="thm-btn error-page__btn m-auto mt-5"
+                  >العودة الي الرئيسية</a
+                >
               </div>
             </div>
           </div>
         </div>
       </section>
-      <!--Contact Page End-->
-
-      <!--Contact Two Start-->
-      <section class="contact-two">
-        <div class="container">
-          <div class="row">
-            <div class="col-xl-6 col-lg-6">
-              <div class="contact-two__left">
-                <div class="contact-two__img">
-                  <img src="assets/images/gallery/contactus.png" alt="" />
-                </div>
-              </div>
-            </div>
-            <div class="col-xl-6 col-lg-6">
-              <div class="contact-two__right">
-                <div class="section-title text-left">
-                  <div class="section-title__tagline-box">
-                    <p class="section-title__tagline">get estimeate</p>
-                  </div>
-                  <h2 class="section-title__title">contact with us</h2>
-                </div>
-                <p class="contact-two__text">
-                  Him days likeness waters the you will after a fifth to every
-                  after he itself<br />
-                  second can't cattle wherein they are casue
-                </p>
-                <div class="contact-two__form-box">
-                  <form
-                    action="assets/inc/sendemail.php"
-                    class="contact-two__form contact-form-validated"
-                    novalidate="novalidate"
-                  >
-                    <div class="row">
-                      <div class="col-xl-6">
-                        <div class="contact-two__input-box">
-                          <input
-                            type="text"
-                            placeholder="Full Name*"
-                            name="name"
-                          />
-                        </div>
-                      </div>
-                      <div class="col-xl-6">
-                        <div class="contact-two__input-box">
-                          <input
-                            type="email"
-                            placeholder="Email*"
-                            name="email"
-                          />
-                        </div>
-                      </div>
-                      <div class="col-xl-6">
-                        <div class="contact-two__input-box">
-                          <input
-                            type="text"
-                            placeholder="Phone*"
-                            name="Phone"
-                          />
-                        </div>
-                      </div>
-                      <div class="col-xl-6">
-                        <div class="contact-two__input-box">
-                          <div class="contact-two__showing-sort">
-                            <select
-                              class="selectpicker"
-                              aria-label="Default select example"
-                            >
-                              <option selected>Subject*</option>
-                              <option value="1">Sort by popular-01</option>
-                              <option value="2">Sort by popular-02</option>
-                              <option value="3">Sort by popular-03</option>
-                            </select>
-                          </div>
-                        </div>
-                      </div>
-                      <div class="col-xl-12">
-                        <div class="contact-two__input-box text-message-box">
-                          <textarea
-                            name="message"
-                            placeholder="Write your comment*"
-                          ></textarea>
-                        </div>
-                        <div class="contact-two__btn-box">
-                          <button
-                            type="submit"
-                            class="thm-btn contact-two__btn rounded"
-                          >
-                            send message<span class="icon-right-arrow"></span>
-                          </button>
-                        </div>
-                      </div>
-                    </div>
-                  </form>
-                  <div class="result"></div>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-      </section>
-      <!--Contact Two End-->
+      <!--Error Page End-->
 
       <!--Site Footer Start-->
       <footer class="site-footer">
@@ -429,7 +288,7 @@
                 >
                   <div class="footer-widget__column footer-widget__about">
                     <div class="footer-widget__logo">
-                      <a href="index.html"
+                      <a href="index-ar.html"
                         ><img
                           src="assets/images/resources/logo3.png"
                           alt=""
@@ -442,7 +301,7 @@
                       donec tren conubian
                     </p>
                     <div class="footer-widget__emergency-call">
-                      <p>Emergency</p>
+                      <p>اتصل الآن</p>
                       <p class="d-flex align-items-center gap-3">
                         <i class="fas fa-phone"></i
                         ><a href="tel:+201013714343">+20 101 3714 343</a>
@@ -460,26 +319,26 @@
                 >
                   <div class="footer-widget__column footer-widget__services">
                     <div class="footer-widget__title-box">
-                      <h3 class="footer-widget__title">Our Service</h3>
+                      <h3 class="footer-widget__title">خدماتنا</h3>
                     </div>
                     <ul class="footer-widget__services-list list-unstyled">
                       <li>
-                        <a href="about.html">Customer Experience</a>
+                        <a href="about-ar.html">التأمينات الإجتماعية</a>
                       </li>
                       <li>
-                        <a href="about.html">Business Strategy</a>
+                        <a href="about-ar.html">هيكلة الأجور التأمينية</a>
                       </li>
                       <li>
-                        <a href="about.html">Leadership Development</a>
+                        <a href="about-ar.html">إستشارات الموارد البشرية</a>
                       </li>
                       <li>
-                        <a href="about.html">Culture Change</a>
+                        <a href="about-ar.html">إنهاء تراخيص عمل الأجانب</a>
                       </li>
                       <li>
-                        <a href="about.html">Engineering & Optimization</a>
+                        <a href="about-ar.html">التأمين الصحي</a>
                       </li>
                       <li>
-                        <a href="about.html">Human Resource</a>
+                        <a href="about-ar.html">الخدمة المهنية</a>
                       </li>
                     </ul>
                   </div>
@@ -490,20 +349,20 @@
                 >
                   <div class="footer-widget__column footer-widget__contact">
                     <div class="footer-widget__title-box">
-                      <h3 class="footer-widget__title">Contact us</h3>
+                      <h3 class="footer-widget__title">تواصل معنا</h3>
                     </div>
                     <ul class="footer-widget__contact-list list-unstyled">
                       <li>
-                        <p class="footer-widget__contact-title">Phone</p>
+                        <p class="footer-widget__contact-title">الهاتف</p>
                         <p class="footer-widget__contact-location">
                           <a href="tel:+201013714343">+20 101 3714 343</a>
                         </p>
                       </li>
                       <li>
-                        <p class="footer-widget__contact-title">Location</p>
+                        <p class="footer-widget__contact-title">العنوان</p>
                         <p class="footer-widget__contact-location">
-                          Villa 14,72 St. <br />
-                          Maadi - Cairo
+                          فيلا 14,72 شارع <br />
+                          المعادي - القاهرة
                         </p>
                       </li>
                     </ul>
@@ -518,8 +377,8 @@
           <div class="container">
             <div class="site-footer__bottom-inner justify-content-center">
               <p class="site-footer__bottom-text">
-                Copyright © 2025 <a href="#">Index Consultation.</a> All Rights
-                Reserved.
+                حقوق النشر © 2025 <a href="#">Index Consultation.</a> جميع
+                الحقوق محفوظة.
               </p>
             </div>
           </div>
@@ -538,7 +397,7 @@
         ></span>
 
         <div class="logo-box">
-          <a href="index.html" aria-label="logo image"
+          <a href="index-ar.html" aria-label="logo image"
             ><img src="assets/images/resources/logo-3.png" width="150" alt=""
           /></a>
         </div>
